 cnp-pci-dss-1.3.3-ingress-s8lfyb9.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-ingress-6mrh7rd
  namespace: kube-system
spec:
  description: "This policy will allow the inbound connection"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 6c4b5bcf94
      kubearmor-app: kubearmor
      pod-template-generation: 1
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 10.10.10.1/16  #change with your id address
